[metadata]
name = iksmproxy3
version = 1.0.1
summary = splatoon2 session token getter
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    requests
    configparser
    webcord
    mitmproxy

[options.entry_points]
console_scripts =
    iksmproxy3 = iksmproxy3.app.proxy:main

